--- a/Full Stack Dev/test3 - Image & Lists/style.css
+++ b/Full Stack Dev/test3 - Image & Lists/style.css
@@ -1,7 +1,14 @@
 td {
     border: 2px solid white;
 }
+header{
+    color: rgb(42, 165, 155);
+}
+footer{
+    font-style: italic;
+    color: aqua;
+}
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 149);
 }
