--- a/Full Stack Dev/test7 - ID & Classes/style.css
+++ b/Full Stack Dev/test7 - ID & Classes/style.css
@@ -1,20 +1,14 @@
-td {
-    border: 2px solid white;
+.red{
+    /* Class */
+    background-color: rgb(255, 221, 127);
+    color: rgb(183, 13, 21);
 }
-header{
-    color: rgb(42, 165, 155);
+
+#second {
+    /* ID */
+    background-color: blanchedalmond;
 }
-footer{
-    font-style: italic;
-    color: aqua;
-}
+
 body {
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 149);
-}
-ol {
-    list-style: lower-roman;
-}
-ul {
-    list-style-type: square;
 }
