--- a/CSS/test 04/style.css
+++ b/CSS/test 04/style.css
@@ -29,3 +29,18 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
 }
+
+.f7 {
+    text-align: center;
+    font-variant: small-caps;
+}
+
+.f8 {
+    text-decoration:solid;
+    letter-spacing: 5px;
+    text-align: right;
+}
+
+.f9 {
+    text-shadow: 2px 3px 5px blueviolet;
+}
